# fe3o4

./: README.md  _wash
fe2o3-agent/: .containerignore  Cargo.toml  Containerfile  README.md  build.rs
fe2o3-agent/schema/: fe2o3-agent_schema.capnp  fe2o3_agent_schema_capnp.rs
fe2o3-agent/src/: main.rs  server.rs
fe2o3-agents/code-optimizer/: Cargo.toml
fe2o3-agents/gix-ops/: Cargo.toml  wasmcloud.toml
fe2o3-agents/gix-ops/src/: lib.rs
fe2o3-agents/gix-ops/wit/: world.wit
fe3o4-site/: README.md
fe3o4-🧠/: README.md
