[package]
name = "fe2o3-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
anyhow = "1.0.89"
capnp = "0.19.7"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
capnpc = "0.19.0"
anyhow = "1.0.89"
